2008-09-02  Alejandro G. Castro	 <alex@igalia.com>

	Reviewed interaction logic based on device experiences, refactored
	code.

	* src/hildon-pannable-area.c,
	(hildon_pannable_area_class_init): Updated default vmax speed.
	(hildon_pannable_area_calculate_velocity): Added this function, it
	avoids duplicate valocity calculation. Adjusted calculation to
	avoid problems with zero dist events.

	(hildon_pannable_area_motion_notify_cb): Now we use the
	calculate_velocity function.

2008-09-02  Alejandro Pinheiro  <apinheiro@igalia.com>

	* src/hildon-date-selector.c
	(hildon_date_selector_select_current_date): fix the day range check
	as it failed using the last day of the current month
	Fixes NB#88023

2008-09-02  Alejandro Pinheiro  <apinheiro@igalia.com>

	* src/hildon-touch-selector.c
	(hildon_touch_selector_get_num_columns): added a parameter validation
	Fixes: NB#88022

2008-08-29  Alberto Garcia  <agarcia@igalia.com>

	* examples/Makefile.am
	* examples/hildon-edit-toolbar-example.c: Example of the
	HildonEditToolbar widget.

2008-08-29  Claudio Saavedra  <csaavedra@igalia.com>

	* configure.ac: postrelease version bump.

2008-08-29  Claudio Saavedra  <csaavedra@igalia.com>

	Release 2.1.6-1.

	* configure.ac: prerelease version bump.
	* debian/changelog: update.

2008-08-29  Claudio Saavedra  <csaavedra@igalia.com>

	* examples/hildon-pannable-area-example-2.c: (main): Add a pixbuf
	renderer to display stock icons in the touch list. Also, set the sizes
	to the recommended in the style guide.

2008-08-28  Alejandro Pinheiro  <apinheiro@igalia.com>
	* src/hildon-touch-selector.h
	(hildon_touch_selector_set_active_iter): renamed, now is
	hildon_touch_selector_select_iter
	(hildon_touch_selector_get_active_iter): renamed, now is
	hildon_touch_selector_get_selected
	(hildon_touch_selector_unselect_iter): added
	* src/hildon-touch-selector.c
	Update after API modification (methods renamed)
	(hildon_touch_selector_select_iter): remove gtk_tree_view_set_cursor in